<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_drawer_home" />
        <item
            android:id="@+id/nav_ver_dica"
            android:icon="@drawable/ic_categoria"
            android:title="@string/menu_drawer_ver_dicas" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_perfil"
            android:title="@string/menu_drawer_perfil" />
        <item
            android:id="@+id/nav_cadastro_usuario"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_drawer_cadastrar_usuario" />

        <item
            android:id="@+id/nav_phone"
            android:icon="@drawable/ic_phone"
            android:title="@string/menu_drawer_telefones_uteis" />

        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_drawer_info" />

    </group>

    <group
        android:id="@+id/drawer_nav_area_restrita"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_cadastro_dica"
            android:icon="@drawable/ic_dicas"
            android:title="@string/menu_drawer_cadastrar_dica" />
        <item
            android:id="@+id/nav_termos_de_uso"
            android:title="@string/menu_drawer_termos_de_uso" />
        <item
            android:id="@+id/nav_politica_privacidade"
            android:title="@string/menu_drawer_politica_privacidade" />
    </group>

</menu>
