<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="br.edu.ifrs.projetoexemplomd.ui.home.HomeFragment"
        android:label="@string/menu_drawer_home"
        tools:layout="@layout/fragment_home" />

    <activity
        android:id="@+id/nav_cadastro_usuario"
        android:name="br.edu.ifrs.projetoexemplomd.ui.activities.CadastroUsuarioActivity"
        android:label="@string/txt_header_navigation_cadastro"
        tools:layout="@layout/activity_cadastrar_usuario" />

    <fragment
        android:id="@+id/nav_phone"
        android:name="br.edu.ifrs.projetoexemplomd.ui.telefone.TelefoneFragment"
        android:label="@string/menu_drawer_telefones_uteis"
        tools:layout="@layout/fragment_telefone" />

    <fragment
        android:id="@+id/nav_sobre"
        android:name="br.edu.ifrs.projetoexemplomd.ui.info.SobreFragment"
        android:label="@string/menu_drawer_info"
        tools:layout="@layout/fragment_sobre" />

    <fragment
        android:id="@+id/nav_termos_de_uso"
        android:name="br.edu.ifrs.projetoexemplomd.ui.info.TermosUsoFragment"
        android:label="@string/menu_drawer_termos_de_uso"
        tools:layout="@layout/fragment_termos_uso" />

    <fragment
        android:id="@+id/nav_politica_privacidade"
        android:name="br.edu.ifrs.projetoexemplomd.ui.info.PoliticaPrivacidadeFragment"
        android:label="@string/menu_drawer_politica_privacidade"
        tools:layout="@layout/fragment_politica_privacidade" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="br.edu.ifrs.projetoexemplomd.ui.perfil.PerfilFragment"
        android:label="@string/menu_drawer_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_configuracao"
        android:name="br.edu.ifrs.projetoexemplomd.ui.configuracao.ConfiguracaoFragment"
        android:label="@string/menu_drawer_perfil"
        tools:layout="@layout/fragment_configuracao" />

    <fragment
        android:id="@+id/nav_listar_dicas"
        android:name="br.edu.ifrs.projetoexemplomd.ui.dica.DicaFragment"
        android:label="@string/menu_drawer_ver_dicas"
        tools:layout="@layout/fragment_dica" />

    <fragment
        android:id="@+id/nav_quiz"
        android:name="br.edu.ifrs.projetoexemplomd.ui.quiz.QuizFragment"
        android:label="@string/card_quiz"
        tools:layout="@layout/fragment_quiz" />

    <fragment
        android:id="@+id/nav_ong"
        android:name="br.edu.ifrs.projetoexemplomd.ui.ong.OngFragment"
        android:label="@string/card_ongs"
        tools:layout="@layout/fragment_ong" />

    <fragment
        android:id="@+id/nav_onboard"
        android:name="br.edu.ifrs.projetoexemplomd.ui.quiz.OnboardFragment"
        android:label="@string/toolbar_onboard"
        tools:layout="@layout/fragment_onboard" />

    <fragment
        android:id="@+id/nav_maps"
        android:name="br.edu.ifrs.projetoexemplomd.ui.map.MapaFragment"
        android:label="Locais para Ajuda e Apoio"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/nav_feedback"
        android:name="br.edu.ifrs.projetoexemplomd.ui.feedback.FeedbackFragment"
        android:label="Resultado"
        tools:layout="@layout/fragment_feedback" />

    <fragment
        android:id="@+id/nav_navegador"
        android:name="br.edu.ifrs.projetoexemplomd.ui.navegador.NavegadorFragment"
        android:label="Navegador"
        tools:layout="@layout/fragment_navegador" />

</navigation>