<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:gravity="center">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="16dp"
            app:srcCompat="@mipmap/logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_titulo"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_marginBottom="32dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_edit_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/txt_login_cadastar_email"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_edit_layout_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_edit_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/txt_login_cadastrar_senha"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login_acessar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_btn_login_acessar"/>

    <Button
        android:id="@+id/btn_login_cadastrar_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/menu_drawer_cadastrar_usuario"/>

    <Button
        android:id="@+id/btnVisitar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_visitar"
        style="@style/botao"/>

</LinearLayout>


