<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.quiz.OnboardFragment">
    <TextView
        android:id="@+id/pontos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/feedback_pontos"
        android:textAlignment="center"
        android:textSize="28sp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/feedback_categoria1_titulo"
        android:textAlignment="center"
        android:textSize="28sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pontos"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_categoria1_desc"
        android:textAlignment="center"
        android:textSize="28sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoria"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btn_feedback"
        android:layout_width="wrap_content"
        android:layout_height="74dp"
        android:text="Ok!"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descricao" />

</androidx.constraintlayout.widget.ConstraintLayout>